--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-auth",
+  "name": "next-auth-example",
   "version": "0.1.0",
   "private": true,
   "description": "Authentication for Next.js",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -29,7 +30,7 @@
     "printWidth": 80,
     "tabWidth": 2,
     "useTabs": false,
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "trailingComma": "none",
     "bracketSpacing": true,
